2010-03-16 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSliderCell.m:
	* Headers/AppKit/NSSliderCell.h:
	Initial implementation of circular sliders.
	I need to refactor NSSliderCell drawing code out to GSTheme
	some time soon.

2010-03-16 German Arias <german@xelalug.org>

	* Resources/French.lproj/Localizable.strings: Added patch 
        by Philippe Roussel.

2010-03-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSEvent.m: Handle type flagsChanged correctly.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m: Correct the decoding of the <bytes>
	element. Use the GSNibLoaging method to set the main menu.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCursor.m (-initWithCoder:): Retain self, when using a
	predefined cursor.
	* Source/NSClipView.m (-initWithCoder:): Undo Greg's hack to
	retain the cursor.
	* Source/NSView.m (-initWithCoder:),
	* Source/NSTextView.m (-initWithCoder:): Small improvements for
	keyed decoding.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-replaceTextContainer:): Retain self not
	the layout manager during container replacement.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-description): Add some useful output to the
	decription method.
	* Source/NSView.m (-initWithCoder:): Decode the NSBounds value.
	* Source/NSView.m (-beginPageInRect:atPlacement:): Avoid compiler warning.

2010-03-14 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSOpenGLView.m:
	Add an -initWithCoder: implementation which subscribes to
	the frame change notifications like -init.
	Without this addition, NSOpenGLViews loaded from nibs 
	weren't resizing properly.
	
	Note: it should also probably set a pixel format, but I
	didn't add that because it was causing an error.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m: New file with basic XIB format
	loading.
	* Source/GNUmakefile: Add new file.

2010-03-13 German Arias <german@xelalug.org>
